--- a/index.html
+++ b/index.html
@@ -108,29 +108,23 @@
 
 <body>
     <main>
-        <header class="main-header">
-            <div class="header-container-grid"> <a href="/" class="logo-link"> <img src="./img/logo positivo.svg"
-                        alt="Logo da empresa Ekooby">
-                </a>
+        <div class="banner">
+            <header class="espacolaterais">
+                <img src="./img/logo positivo.svg" alt="Logo da empresa Ekooby">
 
-                <nav class="main-nav">
-                    <ul>
-                        <li><a href="#">Maquiagem</a></li>
-                        <li><a href="#">Cabelo</a></li>
-                        <li><a href="#">Skin Care</a></li>
-                        <li><a href="#">Perfume</a></li>
-                    </ul>
+                <nav class="menu">
+                    <a href="#">Maquiagem</a>
+                    <a href="#">Cabelo</a>
+                    <a href="#">Skin Care</a>
+                    <a href="#">Perfume</a>
                 </nav>
 
-                <div class="cart-icon"> <a href="#" aria-label="Carrinho de Compras"> <i class="bi bi-cart"></i> </a>
+                <div class="cart-icon"> <a href="#" aria-label="Carrinho de Compras"> <i class="bi bi-cart"></i>
+                    </a>
                 </div>
-            </div>
-        </header>
+            </header>
+        </div>
 
-        <section class="banner"> <img src="./img/banner principal.png"
-                alt="Imagem de um perfume com detalhes sobre suas qualidades">
-            <div class="banner-overlay"> </div>
-        </section>
 
         <section class="sobre-nossos-produtos">
             <div class="titulo-container">
@@ -152,33 +146,38 @@
 
                     <div class="quality-card">
                         <div id="card-2" class="card-icon">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-leaf" viewBox="0 0 16 16">
-  <path d="M1.4 1.7c.216.289.65.84 1.725 1.274 1.093.44 2.884.774 5.834.528l.37-.023c1.823-.06 3.117.598 3.956 1.579C14.16 6.082 14.5 7.41 14.5 8.5c0 .58-.032 1.285-.229 1.997q.198.248.382.54c.756 1.2 1.19 2.563 1.348 3.966a1 1 0 0 1-1.98.198c-.13-.97-.397-1.913-.868-2.77C12.173 13.386 10.565 14 8 14c-1.854 0-3.32-.544-4.45-1.435-1.125-.887-1.89-2.095-2.391-3.383C.16 6.62.16 3.646.509 1.902L.73.806zm-.05 1.39c-.146 1.609-.008 3.809.74 5.728.457 1.17 1.13 2.213 2.079 2.961.942.744 2.185 1.22 3.83 1.221 2.588 0 3.91-.66 4.609-1.445-1.789-2.46-4.121-1.213-6.342-2.68-.74-.488-1.735-1.323-1.844-2.308-.023-.214.237-.274.38-.112 1.4 1.6 3.573 1.757 5.59 2.045 1.227.215 2.21.526 3.033 1.158.058-.39.075-.782.075-1.158 0-.91-.288-1.988-.975-2.792-.626-.732-1.622-1.281-3.167-1.229l-.316.02c-3.05.253-5.01-.08-6.291-.598a5.3 5.3 0 0 1-1.4-.811"/>
-</svg>
-                        <p>Não prejudicial ao meio ambiente</p>
-                    </div>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-leaf" viewBox="0 0 16 16">
+                                <path
+                                    d="M1.4 1.7c.216.289.65.84 1.725 1.274 1.093.44 2.884.774 5.834.528l.37-.023c1.823-.06 3.117.598 3.956 1.579C14.16 6.082 14.5 7.41 14.5 8.5c0 .58-.032 1.285-.229 1.997q.198.248.382.54c.756 1.2 1.19 2.563 1.348 3.966a1 1 0 0 1-1.98.198c-.13-.97-.397-1.913-.868-2.77C12.173 13.386 10.565 14 8 14c-1.854 0-3.32-.544-4.45-1.435-1.125-.887-1.89-2.095-2.391-3.383C.16 6.62.16 3.646.509 1.902L.73.806zm-.05 1.39c-.146 1.609-.008 3.809.74 5.728.457 1.17 1.13 2.213 2.079 2.961.942.744 2.185 1.22 3.83 1.221 2.588 0 3.91-.66 4.609-1.445-1.789-2.46-4.121-1.213-6.342-2.68-.74-.488-1.735-1.323-1.844-2.308-.023-.214.237-.274.38-.112 1.4 1.6 3.573 1.757 5.59 2.045 1.227.215 2.21.526 3.033 1.158.058-.39.075-.782.075-1.158 0-.91-.288-1.988-.975-2.792-.626-.732-1.622-1.281-3.167-1.229l-.316.02c-3.05.253-5.01-.08-6.291-.598a5.3 5.3 0 0 1-1.4-.811" />
+                            </svg>
+                            <p>Não prejudicial ao meio ambiente</p>
+                        </div>
                     </div>
 
                     <div id="card-3" class="quality-card">
                         <div class="card-icon">
-                             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#000000" viewBox="0 0 256 256">
-                        <path
-                            d="M112,164a12,12,0,1,1-12-12A12,12,0,0,1,112,164Zm44-12a12,12,0,1,0,12,12A12,12,0,0,0,156,152Zm60,36a52,52,0,0,1-88,37.52A52,52,0,1,1,56.72,149.8,71.58,71.58,0,0,1,63,129C44,91.1,32.53,40.76,45.64,19.08A22,22,0,0,1,65.06,8c14.12,0,26,11.89,36.44,36.36,6.22,14.62,10.85,31.32,14,44.74a71.8,71.8,0,0,1,25,0c3.13-13.42,7.76-30.12,14-44.74C164.9,19.89,176.82,8,190.94,8a22,22,0,0,1,19.42,11.08C223.47,40.76,212,91.1,193,129a71.58,71.58,0,0,1,6.26,20.76A51.77,51.77,0,0,1,216,188ZM155.89,93.63a71.72,71.72,0,0,1,26.88,19.64A218.45,218.45,0,0,0,197.6,67.08c3.49-18.13,3.15-33-.93-39.72A6,6,0,0,0,190.94,24c-6.61,0-14.52,9.7-21.72,26.62C163.29,64.56,158.87,80.74,155.89,93.63ZM73.23,113.27a71.72,71.72,0,0,1,26.88-19.64c-3-12.89-7.4-29.07-13.33-43C79.58,33.7,71.67,24,65.06,24a6,6,0,0,0-5.73,3.36C55.25,34.1,54.91,49,58.4,67.08A218.45,218.45,0,0,0,73.23,113.27ZM200,188a35.87,35.87,0,0,0-13.34-28,8,8,0,0,1-2.92-5.45,56,56,0,0,0-111.48,0A8,8,0,0,1,69.34,160a36,36,0,1,0,47.28,54.21l-9.74-8.09a8,8,0,1,1,10.24-12.3L128,202.9l10.88-9.05a8,8,0,0,1,10.24,12.3l-9.74,8.09A36,36,0,0,0,200,188Z">
-                        </path>
-                    </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="#000000"
+                                viewBox="0 0 256 256">
+                                <path
+                                    d="M112,164a12,12,0,1,1-12-12A12,12,0,0,1,112,164Zm44-12a12,12,0,1,0,12,12A12,12,0,0,0,156,152Zm60,36a52,52,0,0,1-88,37.52A52,52,0,1,1,56.72,149.8,71.58,71.58,0,0,1,63,129C44,91.1,32.53,40.76,45.64,19.08A22,22,0,0,1,65.06,8c14.12,0,26,11.89,36.44,36.36,6.22,14.62,10.85,31.32,14,44.74a71.8,71.8,0,0,1,25,0c3.13-13.42,7.76-30.12,14-44.74C164.9,19.89,176.82,8,190.94,8a22,22,0,0,1,19.42,11.08C223.47,40.76,212,91.1,193,129a71.58,71.58,0,0,1,6.26,20.76A51.77,51.77,0,0,1,216,188ZM155.89,93.63a71.72,71.72,0,0,1,26.88,19.64A218.45,218.45,0,0,0,197.6,67.08c3.49-18.13,3.15-33-.93-39.72A6,6,0,0,0,190.94,24c-6.61,0-14.52,9.7-21.72,26.62C163.29,64.56,158.87,80.74,155.89,93.63ZM73.23,113.27a71.72,71.72,0,0,1,26.88-19.64c-3-12.89-7.4-29.07-13.33-43C79.58,33.7,71.67,24,65.06,24a6,6,0,0,0-5.73,3.36C55.25,34.1,54.91,49,58.4,67.08A218.45,218.45,0,0,0,73.23,113.27ZM200,188a35.87,35.87,0,0,0-13.34-28,8,8,0,0,1-2.92-5.45,56,56,0,0,0-111.48,0A8,8,0,0,1,69.34,160a36,36,0,1,0,47.28,54.21l-9.74-8.09a8,8,0,1,1,10.24-12.3L128,202.9l10.88-9.05a8,8,0,0,1,10.24,12.3l-9.74,8.09A36,36,0,0,0,200,188Z">
+                                </path>
+                            </svg>
+                            <p>Não testado em animais</p>
                         </div>
-                        <p>Não testado em animais</p>
-                    </div>
+
                     </div>
                 </div>
+            </div>
         </section>
 
-        <section class="product-gallery-section"> <img src="./img/shampoo 2.png" alt="Shampoo e condicionador Ekooby">
-            <img src="./img/perfume verde.png" alt="Perfume verde da Chanel">
-            <img src="./img/boca rosa base SEM FUNDO.png" alt="Base Boca Rosa"> <img
-                src="./img/creme corporal virginia.png" alt="Creme corporal da Virginia">
-            <img src="./img/esmalte.png" alt="Kit de esmaltes da Impala">
-            <img src="./img/sabo.png" alt="Sabonetes artesanais">
+        <section class="product-gallery-section">
+            <img id="card-01" src="./img/perfume verde.png" alt="Perfume verde da Chanel">
+            <img id="card-02" src="./img/boca rosa base SEM FUNDO.png" alt="Base Boca Rosa">
+            <img id="card-03" src="./img/creme corporal virginia.png" alt="Creme corporal da Virginia">
+            <img id="card-04" src="./img/esmalte.png" alt="Kit de esmaltes da Impala">
+            <img id="card-05" src="./img/sabo.png" alt="Sabonetes artesanais">
+            <img id="card-06" src="./img/shampoo 2.png" alt="Shampoo e condicionador Ekooby">
         </section>
     </main>
 
