Finalizando titulo e questionario

--- a/tadeu.html
+++ b/tadeu.html
@@ -218,6 +218,7 @@
 
     </main>
 
+    <!-- ------------------------------------footer----------------------------------------------- -->
     <footer>
         <div class="container-grid roda-pe">
             <img src="./img/VersãoPositiva.svg" alt="Logo da Pixel V">
