--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EKOOBY</title>
-    <link rel="shortcut icon" href="./img/perfume verde.png" type="image/x-icon">
+    <link rel="shortcut icon" href=".//img/Ativo 6.svg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -26,6 +26,20 @@
                     <a href="#">Skin Care</a>
                     <a href="#">Perfume</a>
                 </nav>
+
+                <button onclick="AbreFechaMenu()">
+                    <svg id="icone-barras" xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                        <path
+                            d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z" />
+                    </svg>
+
+                    <svg id="icone-x" xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 384 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                        <path
+                            d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z" />
+                    </svg>
+                </button>
 
                 <div class="cart-icon"> <a href="#" aria-label="Carrinho de Compras"> <i class="bi bi-cart"></i>
                     </a>
@@ -80,7 +94,7 @@
             </div>
         </section>
 
-        <!-- ----------------------------------Nossos Produtos-------------------------------------------------------------------------- -->
+        <!--- ----------------------------------Nossos Produtos-------------------------------------------------------------------------- -->
 
         <section class="product-gallery-section">
             <div class="titulo-verde-01">
@@ -99,7 +113,7 @@
 
         <!-- ---------------------------------Sobre a Ekooby----------------------------------------------- -->
         <secttion class="sobre-a-ekooby-02">
-            <div class="titulo-verde">
+            <div class="titulo-verde-02">
                 <h2>Sobre a EKOOBY</h2>
             </div>
             <div class="sobre-imagens">
@@ -111,8 +125,8 @@
                     consumidores. Os produtos são aprovados pela Anvisa, e a marca ganhou campeonatos de melhor produto
                 </p>
 
-                
-                    <img src="./img/produtos ekooby 2.png" alt="maquiagem da ekooby">
+
+                <img src="./img/produtos ekooby 2.png" alt="maquiagem da ekooby">
             </div>
         </secttion>
 
@@ -234,29 +248,87 @@
 
         <!-- --------------------------------------contato------------------------------------------------ -->
 
-        <section class="contato-formulario">
-            <h2>Entre em Contato Conosco</h2>
-            <form action="#" method="POST">
-                <div class="campo">
-                    <label for="campo-nome">Qual é o seu nome?</label>
-                    <input type="text" id="campo-nome" name="nome" placeholder="Digite o seu nome..." required>
-                </div>
-                <div class="campo">
-                    <label for="campo-email">Em qual email podemos te responder?</label>
-                    <input type="email" id="campo-email" name="email" placeholder="Digite seu email" required>
-                </div>
-                <button type="submit" class="botao-enviar">Enviar Mensagem</button>
-            </form>
+        <section class="questionnaire-section">
+            <div class="questionnaire-header">
+                <h1>Ganhe 10% de desconto</h1>
+                <p>Cadastre-se e receba um cupom para a sua primeira compra</p>
+            </div>
+
+            <div class="questionnaire-form-container">
+                <form action="#" method="POST" class="questionnaire-form">
+                    <div class="input-field-wrapper">
+                        <input type="text" id="name" name="name" placeholder="Digite Seu Nome" required>
+                    </div>
+
+                    <div class="input-field-wrapper">
+                        <input type="email" id="email" name="email" placeholder="Digite Seu E-mail" required>
+                    </div>
+
+                    <button type="submit" class="submit-button">ENVIAR</button>
+                </form>
+            </div>
         </section>
 
         <!-- --------------------------------------Footer------------------------------------- -->
 
-        <footer>
-            <div class="container-grid roda pe">
-                <img src="./img/logo positivo.svg" alt="logo da pixel v">
 
+        <footer class="main-footer">
+            <div class="footer-volte-ao-topo">
+                <a href="#top" aria-label="Voltar ao topo da página">
+                    <i class="bi bi-caret-up-fill"></i> Voltar ao topo
+                </a>
+            </div>
+
+            <hr class="footer-divider">
+
+            <div class="footer-content-grid">
+                <div class="footer-column">
+                    <h3>REDES SOCIAIS</h3>
+                    <div class="social-icons">
+                        <a href="#" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
+                        <a href="#" aria-label="TikTok"><i class="bi bi-tiktok"></i></a>
+                        <a href="#" aria-label="YouTube"><i class="bi bi-youtube"></i></a>
+                        <a href="#" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
+                    </div>
+                </div>
+
+                <div class="footer-column">
+                    <h3>DÚVIDAS</h3>
+                    <ul class="footer-links">
+                        <li><a href="#">Principais Dúvidas</a></li>
+                        <li><a href="#">Políticas de Privacidade</a></li>
+                        <li><a href="#">Termos e Condições</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-column">
+                    <h3>FALE CONOSCO</h3>
+                    <p>Qualquer dúvida entre em contato conosco! Iremos adorar te ajudar!</p>
+                    <div class="whatsapp-contact">
+                        <i class="bi bi-whatsapp"></i>
+                        <a href="https://wa.me/seunumerodowhatsapp" target="_blank" rel="noopener noreferrer">Contato
+                            via whatsapp</a>
+                    </div>
+                    <p class="whatsapp-hours">Atendimento disponível via Whatsapp das 09h às 18h, exceto finais de
+                        semana e feriados</p>
+                </div>
+            </div>
+
+            <hr class="footer-divider">
+
+            <div class="footer-payment">
+                <h3>FORMAS DE PAGAMENTO</h3>
+                <div class="payment-icons">
+                    <img src="./img/cartao visa.svg" alt="">
+                    <img src="./img/cartao mastercard.svg" alt="Mastercard">
+                    <img src="./img/cc-diners-club-brands.svg" alt="Diners Club">
+                    <img src="./img/cartao pix.svg" alt="PIX">
+
+                </div>
             </div>
         </footer>
+
+
 
     </main>
 
